# niwaki

./: .gitignore  .gitleaks.toml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  pyproject.toml  pyrightconfig.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  vocabulary_request.yml
.github/workflows/: canary.yml  ci.yml  codeql.yml  pages.yml  release.yml  scorecard.yml  wiki.yml
data/scripts/: 01_extract_classes.py  02_extract_props.py  03_build_subset.py
docs/: comparison.md  conf.py  conftest.py  design-first.md  index.md  inside-the-dsl.md  why.md
docs/_static/: coverage-badge.json  custom.css
docs/cookbook/: access-policies-vpc.md  application-contracts.md  async-at-scale.md  day-2-changes.md  external-connectivity.md  fabric-audit.md  fabric-baseline.md  gitops-pipeline.md  index.md  l3out-basic.md  microsegmentation-esg.md  migrate-from-cobra.md  node-registration.md  onboard-tenant.md  sr-mpls-handoff.md  static-paths.md  three-tier-app.md  troubleshooting-connection.md  troubleshooting.md  turn-up-a-rack.md  vlan-migration.md  watch-for-changes.md
docs/guide/: async.md  connection.md  cursors.md  design-dsl.md  discovery.md  errors.md  installation.md  models.md  observing.md  push-modes.md  quickstart.md  subscribing.md  testing.md
docs/reference/: compatibility.md  index.md
docs/reference/api/: catalog.md  client.md  design.md  exceptions.md  index.md  models.md  niwaki.md  query.md  transport.md  utils.md
docs/reference/vocabulary/: aaa.md  controller.md  coverage.md  enums.md  fabric.md  index.md  infra.md  navigation.md  tenant.md  uni.md  vmm_provider.md
docs/wiki/: Cookbook.md  Getting-Help.md  Home.md  Migrating-from-cobra.md  _Footer.md  _Sidebar.md
scripts/: docs.sh  verify_live.py  wheel_smoke.py
src/niwaki/: __init__.py  catalog.py  facade.py
src/niwaki/_codegen/: __init__.py  _field_docs.py  _label_utils.py  basetypes.py  coverage_audit.py  generate.py  generate_catalog.py  generate_design.py  generate_docs.py  generate_domain.py  generate_enums.py  propose_vocabulary.py  report_constraints.py
src/niwaki/design/: __init__.py  _compiler.py  _cursor.py  _engine.py  _generated_cursors.py  _node.py  _push.py  _resolver.py  _sugar.py
src/niwaki/domain/: __init__.py  _child_map.py  vocabulary.yaml
src/niwaki/exceptions/: __init__.py  _api.py  _auth.py  _base.py  _design.py  _models.py  _query.py  _subscription.py  _transport.py
src/niwaki/models/: __init__.py  _wire.py  base.py
src/niwaki/query/: __init__.py  _async_builder.py  _async_subscription.py  _base.py  _builder.py  _events.py  _filters.py  _subscription.py
src/niwaki/transport/: __init__.py  _config.py  _errors.py  _protocols.py  _subscription_socket.py  _subscription_socket_async.py  _token.py  session.py  session_async.py
src/niwaki/utils/: __init__.py  diff.py  response.py
tests/: conftest.py  test_exports.py  test_label_utils.py
tests/debugging/subscription/: diagnose_no_push.py  diagnose_token_match.py  repro_query_layer.py  try_unofficial_guide_flow.py  try_websockets_lib.py
tests/design/: conftest.py  coverage_gaps.json  test_core_yaml.py  test_coverage_audit.py  test_cursor.py  test_docs_generator.py  test_engine.py  test_engine_async.py  test_generated_cursors.py  test_golden_contracts.py  test_golden_domains.py  test_golden_edge_and_management.py  test_golden_epg_world.py  test_golden_mockups.py  test_golden_observability.py  test_plan.py  test_propose_vocabulary.py  test_push.py  test_push_async.py  test_ref.py  test_resolver.py  test_resolver_references.py  test_roots.py  test_staged_multidomain.py  test_sugar.py
tests/docs/: test_snippet_infra.py
tests/domain/: test_domain_nav.py
tests/facade/: test_facade.py  test_facade_async.py  test_subscription_manager.py  test_subscription_manager_async.py
tests/fixtures/: auth_login.json  auth_refresh.json  error_403.json  error_404.json  error_500.json  fvBD_list.json  fvTenant_list.json
tests/integration/: README.md  conftest.py  test_01_fabric.py  test_02_access.py  test_03_tenant.py  test_04_l3out.py  test_05_observability.py  test_06_edge_and_management.py  test_07_srmpls.py  test_carrier_upsert.py  test_catalog_live.py  test_subscribe_live.py  wipe.py
tests/integration/01_day0/: test_001_init_fabric.py  test_002_ntp.py  test_003_syslog.py  test_004_snmp.py  test_005_dns.py  test_006_tenant_mgmt.py  test_007_update_groups.py  test_008_radius.py  test_009_quarantine.py
tests/integration/02_fabric-access/: README.md  test_001_switch_profiles.py  test_002_pools.py  test_003_domains.py  test_004_cdp_lldp_mcp.py  test_005_link_level.py  test_006_port_channel.py  test_007_l2_stp.py  test_008_storm_control.py  test_009_poe.py  test_010_fibre_channel.py  test_011_macsec.py  test_012_synce.py  test_013_dot1x.py  test_014_flow_control.py  test_015_copp.py  test_016_netflow.py
tests/integration/03_fabric/: README.md  test_001_isis.py  test_002_link_policies.py  test_003_macsec.py  test_004_optics.py  test_005_singletons.py  test_006_callhome.py  test_007_snmp_tacacs.py  test_008_syslog.py  test_009_datetime.py  test_010_dns_geo.py  test_011_communication.py  test_012_global_proxy.py  (+4 more)
tests/models/: _test_data.json  test_all_generated.py  test_base.py  test_basetypes.py  test_catalog_getattr.py  test_enums.py  test_generated.py  test_schema_metadata.py  test_wire.py
tests/perf/: bench_imports.py  test_cold_start.py
tests/query/: test_async_builder.py  test_async_subscription.py  test_builder.py  test_catalog.py  test_catalog_public.py  test_events.py  test_filters.py  test_jargon_nav.py  test_subscription.py
tests/scripts/: test_extract_props.py  test_generate_catalog.py  test_verify_live.py
tests/transport/: test_config.py  test_errors.py  test_session.py  test_session_async.py  test_subscription_socket.py  test_subscription_socket_async.py  test_token.py  test_typed_get.py  test_verify_ssl.py
tests/utils/: test_diff.py  test_diff_fields_set.py  test_response.py
(+4093 files in other folders)
