[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "niwaki"
version = "0.13.0"
description = "Modern, typed, design-first Python SDK for Cisco ACI (APIC)"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
requires-python = ">=3.12"
authors = [
    { name = "Khalid El-Ouiali", email = "monark.aiops@pm.me" },
]
maintainers = [
    { name = "Khalid El-Ouiali", email = "monark.aiops@pm.me" },
]
keywords = [
    "cisco",
    "aci",
    "apic",
    "sdk",
    "network-automation",
    "datacenter",
    "infrastructure-as-code",
    "declarative",
    "pydantic",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Telecommunications Industry",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Networking",
    "Topic :: System :: Systems Administration",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.7",
    "httpx>=0.27",
    "stamina>=24.2",
    "pyyaml>=6.0.3",
]

[project.urls]
Homepage = "https://github.com/k3l0-dev/niwaki"
Repository = "https://github.com/k3l0-dev/niwaki"
Documentation = "https://k3l0-dev.github.io/niwaki/"
Changelog = "https://github.com/k3l0-dev/niwaki/blob/main/CHANGELOG.md"
Issues = "https://github.com/k3l0-dev/niwaki/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.30",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "pyright>=1.1.390",
    "python-dotenv>=1.0",
    "sybil>=9",
]
docs = [
    "furo>=2024.8",
    "myst-parser>=4.0",
    "sphinx>=8.2",
    "sphinx-copybutton>=0.5",
]

[tool.hatch.build.targets.wheel]
packages = ["src/niwaki"]

# ── Ruff ──────────────────────────────────────────────────────────────────────

[tool.ruff]
src = ["src"]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF", "A"]
ignore = [
    "A001",  # niwaki.exceptions intentionally redefines ConnectionError / TimeoutError
    "A002",
    "A004",  # niwaki.exceptions intentionally imports names that shadow builtins
]

[tool.ruff.lint.isort]
known-first-party = ["niwaki"]

# ── Mypy ──────────────────────────────────────────────────────────────────────

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src/niwaki"]
exclude = ["src/niwaki/models/_generated/"]

# Generated typed cursors deliberately narrow the base Cursor signatures
# (set/bind take the curated typed kwargs instead of **Any), and a cursor
# inheriting two ancestor maker mixins resolves same-label makers by MRO
# (nearest level wins — the runtime semantics).  Those Liskov violations are
# the feature, so the override and multiple-inheritance checks are disabled.
[[tool.mypy.overrides]]
module = ["niwaki.design._generated_cursors", "niwaki.design._generated_cursors.*"]
disable_error_code = ["override", "misc"]

# ── Coverage ──────────────────────────────────────────────────────────────────
# Generated code (~30k lines) would drown the signal; measure hand-written
# code only. Generators are exercised by their own tests and consistency
# checks, not line coverage.

[tool.coverage.run]
omit = [
    "*/models/_generated/*",
    "*/design/_generated_cursors/*",
    "*/domain/_child_map.py",
]

# ── Pytest ────────────────────────────────────────────────────────────────────

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "integration: tests requiring network access to a live APIC",
    "perf: cold-start / latency budgets (subprocess timing; runs in the normal suite)",
]

[dependency-groups]
dev = [
    "jinja2>=3.1.6",
    "types-pyyaml>=6.0.12.20260518",
]
